# nv-detector

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt
examples/: deadlock_test.cpp  dynamic_example.cpp  memory_leak_test.cpp  plthook_test.cpp
include/: detector.h  lock_detect.h  memory_detect.h  output_control.h  plthook.h
src/: detector.cpp  lock_detect.cpp  memory_detect.cpp  output_control.cpp  plthook_elf64.cpp
